fix: m viewport spacing

--- a/packages/components/src/components/telekom/telekom-footer/telekom-footer.css
+++ b/packages/components/src/components/telekom/telekom-footer/telekom-footer.css
@@ -87,6 +87,7 @@
     flex-direction: row;
     align-items: center;
     list-style: none;
+    gap: var(--telekom-spacing-unit-x2);
   }
 }
 
